* tests: Added a new initial test menu that responds to the d-pad and gamepad buttons.
* external lib: Added iOS and MacOS build libraries based upon MonoGame 3.0.0.0
* tests: Decompressed most of the tile map TMX test files and ran them on xbox 360.
* tests: Added an iOS build of the test content.
* tests: Updated the PSM project file to include all of the content files.
* tests: Removed the display of the assembly version for PSM.
* tests: Removed the PMA optimization directive for iOS. 
* tests: Fixed a file name error in the particles test.
* tests: Updated the XNB files for android and copied the plist and fnt xnb files over to iOS.
* CCTransitionFlipAngular : Obsoleted the 'create' method and added a parameter ctor.
* CCTransitionFlipX: Obsoleted the 'create' method and added a parameter ctor.
* CCTransitionFlipY : Obsoleted the 'create' method and added a parameter ctor.
* FlipXLeftOver, FlipYDownOver, FlipAngularRightOver, FlipYUpOver, FlipXRightOver : Added parameter ctor
* DrawManager: Changed the RenderTarget2D creation to set depth to Depth16 for iOS.
* CCTransitionScene : Added boolean to indicate whether the scene is a transition or not.
* CCDirector : Fixed erroneous hiding of the current scene when switching to a transition scene.
* XBox : Added the GitHubIssue5 test case to the project.
* Tests : Removed the assembly name display on windows phone.
* FadeWhiteTransition : Fixed broken blending state
* DrawManager : Added parsing of the GL capabilities to determine allowed depth and npot caps.
* Fix for the EffectsTest on Android, GitHub issue #7.
* EffectPlayer : Fixed looping of sound effects.
* CCDirector : Fixed PopScene not setting the next scene to be visible.
* CCParticleSystem : Work towards fixing the creation of runtime textures for particles.
* CCSprite : Fixed an iOS color opacity check.
* CCMacros : Refactoring
* Continued major refactoring of names and method usage.