@@ -12,7 +12,7 @@ namespace tests
         {
             CCSize s = CCDirector.SharedDirector.WinSize;
 
-            CCSpriteFrameCache.SharedSpriteFrameCache.AddSpriteFramesWithFile("animations/ghosts.plist", "animations/ghosts");
+            string scope = CCSpriteFrameCache.SharedSpriteFrameCache.AddSpriteFramesWithFile("animations/ghosts.plist", "animations/ghosts");
             CCNode aParent;
             CCSprite l1, l2a, l2b, l3a1, l3a2, l3b1, l3b2;
 
@@ -23,45 +23,45 @@ namespace tests
             AddChild(aParent, 0, (int) kTagSprite.kTagSprite1);
 
             // parent
-            l1 = CCSprite.Create("father.gif");
+            l1 = CCSprite.Create(scope + "father.gif");
             l1.Position = (new CCPoint(s.Width / 2, s.Height / 2));
             aParent.AddChild(l1, 0, (int) kTagSprite.kTagSprite2);
             CCSize l1Size = l1.ContentSize;
 
             // child left
-            l2a = CCSprite.Create("sister1.gif");
+            l2a = CCSprite.Create(scope + "sister1.gif");
             l2a.Position = (new CCPoint(-25 + l1Size.Width / 2, 0 + l1Size.Height / 2));
             l1.AddChild(l2a, -1, (int) kTags.kTagSpriteLeft);
             CCSize l2aSize = l2a.ContentSize;
 
 
             // child right
-            l2b = CCSprite.Create("sister2.gif");
+            l2b = CCSprite.Create(scope + "sister2.gif");
             l2b.Position = (new CCPoint(+25 + l1Size.Width / 2, 0 + l1Size.Height / 2));
             l1.AddChild(l2b, 1, (int) kTags.kTagSpriteRight);
             CCSize l2bSize = l2a.ContentSize;
 
 
             // child left bottom
-            l3a1 = CCSprite.Create("child1.gif");
+            l3a1 = CCSprite.Create(scope + "child1.gif");
             l3a1.Scale = (0.65f);
             l3a1.Position = (new CCPoint(0 + l2aSize.Width / 2, -50 + l2aSize.Height / 2));
             l2a.AddChild(l3a1, -1);
 
             // child left top
-            l3a2 = CCSprite.Create("child1.gif");
+            l3a2 = CCSprite.Create(scope + "child1.gif");
             l3a2.Scale = (0.65f);
             l3a2.Position = (new CCPoint(0 + l2aSize.Width / 2, +50 + l2aSize.Height / 2));
             l2a.AddChild(l3a2, 1);
 
             // child right bottom
-            l3b1 = CCSprite.Create("child1.gif");
+            l3b1 = CCSprite.Create(scope + "child1.gif");
             l3b1.Scale = (0.65f);
             l3b1.Position = (new CCPoint(0 + l2bSize.Width / 2, -50 + l2bSize.Height / 2));
             l2b.AddChild(l3b1, -1);
 
             // child right top
-            l3b2 = CCSprite.Create("child1.gif");
+            l3b2 = CCSprite.Create(scope + "child1.gif");
             l3b2.Scale = (0.65f);
             l3b2.Position = (new CCPoint(0 + l2bSize.Width / 2, +50 + l2bSize.Height / 2));
             l2b.AddChild(l3b2, 1);
